--- a/OntoViewer/src/onto_app/requirements.txt
+++ b/OntoViewer/src/onto_app/requirements.txt
@@ -2,8 +2,7 @@ cachetools==2.1.0
 certifi==2018.10.15
 chardet==3.0.4
 click==6.7
-Flask==1.0.2
-Flask-OAuth==0.12
+Flask==1.1.2
 Flask-SQLAlchemy==2.3.2
 httplib2==0.11.3
 idna==2.7
@@ -13,7 +12,6 @@ Jinja2>=2.10.1
 MarkupSafe==1.0
 oauth2==1.9.0.post1
 oauthlib==2.1.0
-Owlready2==0.9
 pronto==0.10.2
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
@@ -22,12 +20,13 @@ rdflib==4.2.2
 requests==2.20.0
 requests-oauthlib==1.0.0
 rsa==4.0
+scipy==1.4.1
 six==1.11.0
 SQLAlchemy>=1.3.0
 uritemplate==3.0.0
 urllib3>=1.24.2
 werkzeug>=0.15.3
+tensorflow-hub==0.9.0
 tweepy==3.8.0
-Owlready==0.22
-gensim==0.13.4
-numpy==1.17.4
+numpy==1.18.1
+Werkzeug==0.16.1
